# Schur_SP_VINS

./: LICENSE  README.md  SchurVINS快速运行代码
devel/: _catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/_private/catkin_simple/: _catkin  local_setup.sh
devel/_private/catkin_tools_prebuild/: _catkin  _rosinstall  setup.sh
devel/_private/ceres_catkin/: _catkin  _rosinstall  local_setup.sh
devel/_private/cmake_external_project_catkin/: _catkin  local_setup.sh
devel/_private/dbow2_catkin/: _catkin  _rosinstall
devel/_private/eigen_catkin/: _catkin  _rosinstall  local_setup.sh  setup.sh
devel/_private/eigen_checks/: _catkin  local_setup.sh  setup.sh
devel/_private/fast/: _catkin  _rosinstall  local_setup.sh
devel/_private/gflags_catkin/: _catkin  _rosinstall  local_setup.sh
devel/_private/glog_catkin/: _catkin
devel/_private/minkindr/: _catkin  local_setup.sh
devel/_private/minkindr_conversions/: _catkin  _rosinstall  local_setup.sh  setup.sh
devel/_private/opengv/: _catkin  _rosinstall  local_setup.sh
devel/_private/rpg_common/: _catkin  _rosinstall
devel/_private/rpg_trajectory_evaluation/: _catkin  _rosinstall
devel/_private/rqt_svo/: _catkin  _rosinstall
devel/_private/svo/: _catkin  _rosinstall
devel/_private/svo_benchmarking/: _catkin  _rosinstall  local_setup.sh  setup.sh
devel/_private/svo_ceres_backend/: _catkin  local_setup.sh  setup.sh
devel/_private/svo_cmake/: _catkin  _rosinstall  setup.sh
devel/_private/svo_common/: _catkin  setup.sh
devel/_private/svo_direct/: _catkin  _rosinstall  local_setup.sh
devel/_private/svo_img_align/: _catkin  setup.sh
devel/_private/svo_msgs/: _catkin  _rosinstall  setup.sh
devel/_private/svo_online_loopclosing/: _catkin  local_setup.sh
devel/_private/svo_pgo/: _catkin  _rosinstall
devel/_private/svo_ros/: _catkin  setup.sh
devel/_private/svo_test_utils/: _catkin
devel/_private/svo_tracker/: _catkin  setup.sh
devel/_private/svo_vio_common/: _catkin  local_setup.sh
devel/_private/vikit_cameras/: _catkin  _rosinstall  local_setup.sh
devel/_private/vikit_common/: _catkin  local_setup.sh
devel/_private/vikit_py/: _catkin  local_setup.sh  setup.sh
devel/_private/vikit_ros/: _catkin  local_setup.sh  setup.sh
devel/_private/vikit_solver/: _catkin  _rosinstall  local_setup.sh
devel/include/DBoW2/: BowVector.h  DBoW2.h  DBoW2Config.cmake  FBrief.h  FClass.h  FORB.h  FSurf64.h  FeatureVector.h  QueryResults.h  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
devel/include/ceres/: autodiff_cost_function.h  autodiff_local_parameterization.h  c_api.h  ceres.h  conditioned_cost_function.h  context.h  cost_function.h  cost_function_to_functor.h  covariance.h  crs_matrix.h  cubic_interpolation.h  dynamic_autodiff_cost_function.h  dynamic_cost_function.h  dynamic_cost_function_to_functor.h  dynamic_numeric_diff_cost_function.h  evaluation_callback.h  fpclassify.h  gradient_checker.h  (+19 more)
devel/lib/: libceres.so.1  libceres.so.1.14.0  libgflags.so.2.2  libgflags.so.2.2.1  libgflags_nothreads.so.2.2  libgflags_nothreads.so.2.2.1
logs/ceres_catkin/: build.make.000.log.stderr
logs/dbow2_catkin/: build.cmake.000.log.stderr
logs/opengv/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/rpg_common/: build.cmake.000.log.stderr
logs/svo_direct/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/svo_online_loopclosing/: build.cmake.000.log.stderr
logs/svo_ros/: build.cmake.000.log.stderr
logs/vikit_common/: build.cmake.000.log.stderr
src/SchurVINS/svo_direct/: CMakeLists.txt
src/SchurVINS/svo_direct/include/svo/direct/: Schur_SPextractor.h  Schur_SuperPoint.h  feature_detection.h  feature_detection_types.h  matcher.h  ov_SPextractor.h  patch_score.h
src/SchurVINS/svo_direct/src/: Schur_SPextractor.cc  Schur_SuperPoint.cc  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  feature_detection_utils.cpp  ov_SPextractor.cc  ov_SuperPoint.cc
src/dbow2_catkin/: CMakeLists.txt
src/opengv/: CMakeLists.txt
src/rpg_trajectory_evaluation/: CMakeLists.txt
(+335 files in other folders)
